--- a/views/main.ejs
+++ b/views/main.ejs
@@ -17,95 +17,40 @@
     </a>
   </nav>
 
-<div class="container">
-  <h3>Responsive grid with captions improved using flexbox</h3>
-
-
-<div>
-  <a href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg01.jpg">
-    <figure>
-      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg01.jpg" alt="">
-      <figcaption>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
-      </figcaption>
-    </figure>
-  </a>
-  <a href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg02.jpg">
-    <figure>
-      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg02.jpg" alt="">
-      <figcaption>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, ut labore et dolore magna aliqua
-      </figcaption>
-    </figure>
-  </a>
-  <a href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg03.jpg">
-    <figure>
-      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg03.jpg" alt="">
-      <figcaption>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, ut labore et dolore magna aliqua
-      </figcaption>
-    </figure>
-  </a>
-  <a href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg04.jpg">
-    <figure>
-      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg04.jpg" alt="">
-      <figcaption>
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      </figcaption>
-    </figure>
-  </a>
-  <a href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg05.jpg">
-    <figure>
-      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg05.jpg" alt="">
-      <figcaption>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, ut labore et dolore magna aliqua
-      </figcaption>
-    </figure>
-  </a>
-  <a href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg06.jpg">
-    <figure>
-      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg06.jpg" alt="">
-      <figcaption>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
-      </figcaption>
-    </figure>
-  </a>
-  <a href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg07.jpg">
-    <figure>
-      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg07.jpg" alt="">
-       <figcaption>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, ut labore et dolore magna aliqua
-      </figcaption>
-    </figure>
-  </a>
-  <a href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg08.jpg">
-    <figure>
-      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg08.jpg" alt="">
-      <figcaption>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit
-      </figcaption>
-    </figure>
-  </a>
-  <a href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg09.jpg">
-    <figure>
-      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg09.jpg" alt="">
-      <figcaption>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
-      </figcaption>
-    </figure>
-  </a>
-  <a href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg10.jpg">
-    <figure>
-      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg10.jpg" alt="">
-      <figcaption>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
-      </figcaption>
-    </figure>
-  </a>
-</div>
-
-<p class="p">Demo by George Martsoukos. <a href="http://www.sitepoint.com/using-modern-css-to-build-a-responsive-image-grid/" target="_blank">See article</a>.</p>
-</div>
+  <section>
+    <div class="gallery">
+      <a class ="img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg01.jpg">
+          <img src="images/1.jpeg" alt="">
+      </a>
+      <a class ="img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg02.jpg">
+          <img src="images/3.jpeg" alt="">
+      </a>
+      <a class ="img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg03.jpg">
+          <img src="images/3.jpeg" alt="">
+      </a>
+      <a class ="img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg04.jpg">
+          <img src="images/3.jpeg" alt="">
+      </a>
+      <a class ="img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg05.jpg">
+          <img src="images/3.jpeg" alt="">
+      </a>
+      <a class ="img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg06.jpg">
+          <img src="images/3.jpeg" alt="">
+      </a>
+      <a class ="img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg07.jpg">
+          <img src="images/3.jpeg" alt="">
+      </a>
+      <a class ="img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg08.jpg">
+          <img src="images/3.jpeg" alt="">
+      </a>
+      <a class ="img-container"  href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg09.jpg">
+          <img src="himages/3.jpeg" alt="">
+      </a>
+      <a class ="img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg10.jpg">
+          <img src="images/3.jpeg" alt="">
+      </a>
+    </div>
+  </section>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
