--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,7 +3,7 @@
     --ink: #062f4f;
     --posy: #813772;
   }
-  
+
 .navbar-black{
   background-color: black;
   color: white;
@@ -14,82 +14,33 @@
 }
 
 body {
-  width: 80%;
-  margin: 30px auto;
   font-family: sans-serif;
-    background-color: #242930;
+  background-color: #242930;
 }
 
-h3 {
-  text-align: center;
-  font-size: 1.65em;
-  margin: 0 0 30px;
-}
-
-div {
+.gallery{
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
-a {
-  display: inline-block;
-  margin-bottom: 8px;
-  width: calc(50% - 4px);
-  margin-right: 8px;
-  text-decoration: none;
-  color: black;
-}
-
-a:nth-of-type(2n) {
-  margin-right: 0;
-}
-
-@media screen and (min-width: 50em) {
-  a {
-    width: calc(25% - 6px);
-  }
-
-  a:nth-of-type(2n) {
-    margin-right: 8px;
-  }
-
-  a:nth-of-type(4n) {
-    margin-right: 0;
-  }
-}
-
-a:hover img {
-  transform: scale(1.15);
-}
-
-figure {
-  margin: 0;
+.img-container{
+  margin: 10px;
+  background-color: black;
+  width: 15rem;
+  height: 20rem;
   overflow: hidden;
+  display: flex;
 }
 
-figcaption {
-  margin-top: 15px;
-}
-
-img {
-  border: none;
-  max-width: 100%;
+.gallery img {
+  max-width: 15rem;
   height: auto;
-  display: block;
-  background: #ccc;
-  transition: transform .2s ease-in-out;
+  margin: auto;
+  transition: all .2s ease-in-out;
 }
 
-.p a {
-  display: inline;
-  font-size: 13px;
-  margin: 0;
-  text-decoration: underline;
-  color: blue;
-}
-
-.p {
-  text-align: center;
-  font-size: 13px;
-  padding-top: 100px;
+.gallery img:hover {
+  transition: all .3s ease-in-out;
+ transform: scale(1.15);
 }
