--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,10 +25,19 @@ body {
 }
 
 .img-container{
-  margin: 10px;
+  margin: 2px;
   background-color: black;
   width: 15rem;
   height: 20rem;
+  overflow: hidden;
+  display: flex;
+}
+
+.big-img-container{
+  margin: 2px;
+  background-color: black;
+  width: 30rem;
+  height: 40rem;
   overflow: hidden;
   display: flex;
 }
