--- a/views/main.ejs
+++ b/views/main.ejs
@@ -18,37 +18,28 @@
   </nav>
 
   <section>
-    <div class="gallery">
-      <a class ="img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg01.jpg">
+    <div class="container gallery">
+        <a class="big-img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg01.jpg">
+          <img src="images/logoNoLetters.png" alt="">
+        </a>
+        <a class="img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg01.jpg">
           <img src="images/1.jpeg" alt="">
-      </a>
-      <a class ="img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg02.jpg">
+        </a>
+        <a class="img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg02.jpg">
           <img src="images/3.jpeg" alt="">
-      </a>
-      <a class ="img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg03.jpg">
+        </a>
+        <a class="img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg03.jpg">
           <img src="images/3.jpeg" alt="">
-      </a>
-      <a class ="img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg04.jpg">
+        </a>
+        <a class="img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg03.jpg">
           <img src="images/3.jpeg" alt="">
-      </a>
-      <a class ="img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg05.jpg">
+        </a>
+        <a class="img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg03.jpg">
           <img src="images/3.jpeg" alt="">
-      </a>
-      <a class ="img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg06.jpg">
+        </a>
+        <a class="img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg03.jpg">
           <img src="images/3.jpeg" alt="">
-      </a>
-      <a class ="img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg07.jpg">
-          <img src="images/3.jpeg" alt="">
-      </a>
-      <a class ="img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg08.jpg">
-          <img src="images/3.jpeg" alt="">
-      </a>
-      <a class ="img-container"  href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg09.jpg">
-          <img src="himages/3.jpeg" alt="">
-      </a>
-      <a class ="img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg10.jpg">
-          <img src="images/3.jpeg" alt="">
-      </a>
+        </a>
     </div>
   </section>
 
