--- a/views/main.ejs
+++ b/views/main.ejs
@@ -17,31 +17,14 @@
     </a>
   </nav>
 
-  <section>
-    <div class="container gallery">
-        <a class="big-img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg01.jpg">
-          <img src="images/logoNoLetters.png" alt="">
-        </a>
-        <a class="img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg01.jpg">
-          <img src="images/1.jpeg" alt="">
-        </a>
-        <a class="img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg02.jpg">
-          <img src="images/3.jpeg" alt="">
-        </a>
-        <a class="img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg03.jpg">
-          <img src="images/3.jpeg" alt="">
-        </a>
-        <a class="img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg03.jpg">
-          <img src="images/3.jpeg" alt="">
-        </a>
-        <a class="img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg03.jpg">
-          <img src="images/3.jpeg" alt="">
-        </a>
-        <a class="img-container" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg03.jpg">
-          <img src="images/3.jpeg" alt="">
-        </a>
+  <div class="hero-section" id="top">
+    <div class="hero-text">
+      <h1><span class="spcolor";>A</span>EC</h1>
+      <p>Agencia de<br />Marketing y Diseño<br />Digital</p>
+      <a href="#1"><button type="button" class="btn btn-lg btn-outline">Explorar</button></a><br>
+      <a href="/signIn"><button type="button" class="btn btn-lg btn-outline mt-3">Ingresar a tu cuenta</button></a>
     </div>
-  </section>
+  </div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
