--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,6 +4,34 @@
     --posy: #813772;
   }
 
+  /* ===== Hero Section ====== */
+  .hero-section {
+    background: radial-gradient(circle, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)), url("/images/logoNoLetters.png") 10% no-repeat;
+    background-size: cover;
+    height: 100vh;
+    text-align: center;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+  }
+
+  .hero-section h1 {
+    font-weight: bold;
+    letter-spacing: 1rem;
+    font-size: 4rem
+  }
+
+  .hero-section p {
+    letter-spacing: 1rem;
+    font-size: 2rem;
+  }
+
 .navbar-black{
   background-color: black;
   color: white;
